@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-03-10T01:24:07Z",
-  "count_outdated" : 1401,
-  "uniques_outdated" : 921,
+  "timestamp" : "2025-03-11T01:48:32Z",
+  "count_outdated" : 1404,
+  "uniques_outdated" : 924,
   "count" : 1418,
   "uniques" : 938,
   "clones" : [
-    {
-      "timestamp": "2025-02-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2025-02-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-26T00:00:00Z",
       "count": 1,
