@@ -1,17 +1,7 @@
 {
-  "count": 16,
-  "uniques": 7,
+  "count": 14,
+  "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2025-02-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-02-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-02-26T00:00:00Z",
       "count": 1,
